[package]
name = "puck"
version = "0.1.0"
authors = ["JPBeckner <pedrobeckner@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
structopt = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
